# src/models/User.ts
@@ -5,11 +5,6 @@ import mongoose from "mongoose";
 
 const UserSchema = new mongoose.Schema({
 
-  username: { 
-    type: String, 
-    required: true, 
-    unique: true 
-  },
   email: { 
     type: String, 
     required: true, 
